# zkevm_playground

./: Cargo.toml  Makefile  README.md
contracts/: Console.yul.zbin  Counter.json  EcAdd.yul.zbin  EcMul.yul.zbin  EcPairing.yul.zbin  ModExp.yul.zbin  P256VERIFY.yul.zbin  Playground.yul.zbin  secp256k1VERIFY.yul.zbin
examples/: contract_call.rs  contract_call_batch.rs  contract_deployment.rs  contract_deployment_batch.rs
src/: constants.rs  lib.rs  main.rs  utils.rs
src/compile/: mod.rs  project.rs
src/compiler/: mod.rs  output.rs  project.rs
